test-models/src/main/pegasus/com/datahub/test/invalid/MissingRelationshipEntityTypes.pdl
namespace com.datahub.test.invalid

@Aspect = {
  "name": "invalidAspect"
}
record MissingRelationshipEntityTypes {
  @Relationship = {
    "name": "MyRelationship"
  }
  foreignKey: string
}